--- a/playlisttest/src/main/resources/templates/InputSong.html
+++ b/playlisttest/src/main/resources/templates/InputSong.html
@@ -3,54 +3,41 @@
 <head>
 </head>
 <body>
-		<table>
-			<thead>
-				<tr>
-					<th>리스트Id</th>
-					<th>제목</th>
-
-				</tr>
-			</thead>
-
-			<tbody>
-				<tr th:each="lists : ${lists}">
-					<td th:text="${lists.id}" ></td>
-					<td th:text="${lists.title}"></td>
-					<td><a href="#"
-					th:href="'javascript:input('+${lists.id}+')'">노래넣기</a></td>
-				</tr>
-			</tbody>
-
-
-		</table>
+	<form id="frm">		
+	<input type="hidden" id="songTitle" value="${Title}">
+	<input type="hidden" id="singer" value="${singer}">
+		<select>
+			<option value="">리스트 선택</option>
+			<option th:each="lists : ${myList}" 
+					th:value="${lists.id}"
+					th:text="${title.title}" />
+		</select>
+	</form>
+	<button id="inputsong">노래 넣기</button>
 
 </body>
-<script th:inline="javascript">
 
-	function input(plId) {
-	
-		var form = document.createElement("form");
-		form.setAttribute("method", "post");
-		form.setAttribute("action", "/inputsong");
-		var hiddenField = document.createElement("input");
-        hiddenField.setAttribute("type", "hidden");
-        hiddenField.setAttribute("name", "plId");
-        hiddenField.setAttribute("value", plId);
-        form.appendChild(hiddenField);
-        var hiddenField2 = document.createElement("input");
-        hiddenField2.setAttribute("type", "hidden");
-        hiddenField2.setAttribute("name", "title");
-        hiddenField2.setAttribute("value", songTitle);
-        form.appendChild(hiddenField2);
-        var hiddenField3 = document.createElement("input");
-        hiddenField3.setAttribute("type", "hidden");
-        hiddenField3.setAttribute("name", "singer");
-        hiddenField3.setAttribute("value", singerName);
-        form.appendChild(hiddenField3);
+<script src="https://code.jquery.com/jquery-3.6.0.js"
+	integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+	crossorigin="anonymous"></script>
+<script>
+	$("#inputsong").click(function(){
+		var frm = $("#frm").serialize(); //ajax로 데이터를 보내기위해서 하는 작업
+		var songTitle = $("#songTitle").val();
+		var singer = $("#singer").val();
 		
-		document.body.appendChild(form);
-		form.submit();
-	}
+		$.ajax({
+			type : "post", // post방식으로 전송
+			url : "inputsong", // controller로 보낼 url
+			data : frm, //data로는 위에서 serialize한 frm을 보냅니다.
+			async : false, 
+			dataType : "json", // serialize하면 json형태로 값을 보내줘야합니다.
+			contentType: "application/x-www-form-urlencoded; charset=UTF-8", // 인코딩 설정
+			
+		
+		})
+	})
+	
 
 </script>
 
