--- a/playlisttest/src/main/resources/templates/Search.html
+++ b/playlisttest/src/main/resources/templates/Search.html
@@ -28,6 +28,7 @@
         	$.ajax({
         		type: 'GET',
         		url: 'http://ws.audioscrobbler.com/2.0/?method=track.search&track=' + musicKeyWord + '&api_key=' + apiKey + '&format=json',
+        		contentType: "application/x-www-form-urlencoded; charset=UTF-8",		
         		success: function(response){
         			var musicList = response["results"]["trackmatches"]["track"];
         			for(var i=0; i<musicList.length; i++){
