--- a/playlisttest/src/main/resources/templates/main.html
+++ b/playlisttest/src/main/resources/templates/main.html
@@ -10,5 +10,6 @@
 <a href="/playlist/new">플레이리스트 만들기</a>
 <a href="/playlist/list">전체 플레이리스트</a>
 <a href="/song">노래 리스트</a>
+<a href="/search">노래 검색</a>
 </body>
 </html>
