DB 삽입데이터 수정 + 노래삭제/플레이리스트 삭제 ~ing

--- a/playlisttest/src/main/resources/templates/InputSong.html
+++ b/playlisttest/src/main/resources/templates/InputSong.html
@@ -21,7 +21,7 @@
 			<option th:each="lists : ${playlist}" th:value="${lists.id}"
 				th:text="${lists.title}" />
 		</select> 
-		<input type="hidden" id="songTitle" name="songTitle" th:value=${Title}> 
+		<input type="hidden" id="songTitle" name="songTitle" th:value="${Title}"> 
 		<input type="hidden" id="singer" name="singer" th:value="${singer}">
 	</form>
 	<button id="inputsong">노래 넣기</button>
