--- a/playlisttest/src/main/resources/templates/SongResults.html
+++ b/playlisttest/src/main/resources/templates/SongResults.html
@@ -12,7 +12,7 @@
 	<ul th:each="lists : ${songList}">
 		<li th:text="${lists.name}"></li>
 		<li th:text="${lists.artist}"></li>
-		<li><a href="#" target="_blank" th:onclick="input('[[${lists.name}]]','[[${lists.artist}]]')">노래넣기</a></li>
+		<li><a href="#" target="_blank" th:onclick="input('[(${lists.name})]','[(${lists.artist})]')">노래넣기</a></li>
 						<!-- 회원 id까지 넣어주기 -->
 	</ul>
 
