--- a/playlisttest/src/main/resources/templates/main.html
+++ b/playlisttest/src/main/resources/templates/main.html
@@ -11,5 +11,6 @@
 <a href="/playlist/list">전체 플레이리스트</a>
 <a href="/song">노래 리스트</a>
 <a href="/search">노래 검색</a>
+<a href="/playlist/updatelist">플레이리스트 수정하기</a>
 </body>
 </html>
