--- a/playlisttest/src/main/resources/templates/Search.html
+++ b/playlisttest/src/main/resources/templates/Search.html
@@ -22,7 +22,7 @@
 }
 
         function addMusicList(){
-        	var musicKeyWord = $('#songinfo').val()
+        	var musicKeyWord = $('#songinfo').val();
         	$('.musicList').empty()
         	var apiKey = "e63d38bc9de5863a4bbdfa74a087ea38";
         	$.ajax({
@@ -50,6 +50,8 @@
 			onkeyup="addMusicList()">
 		<button type="submit">검색</button>
 	</form>
+
+<div class="musicListList"></div>
 
 </body>
 </html>
