--- a/playlisttest/src/main/resources/templates/SongResults.html
+++ b/playlisttest/src/main/resources/templates/SongResults.html
@@ -12,6 +12,7 @@
 	<ul th:each="lists : ${songList}">
 		<li th:text="${lists.name}"></li>
 		<li th:text="${lists.artist}"></li>
+		<li><img th:src="${lists.image[0]['#text']}"></li>
 		<li><a href="#" target="_blank" th:onclick="input('[(${lists.name})]','[(${lists.artist})]')">노래넣기</a></li>
 						<!-- 회원 id까지 넣어주기 -->
 	</ul>
