--- a/playlisttest/src/main/resources/templates/Search.html
+++ b/playlisttest/src/main/resources/templates/Search.html
@@ -27,7 +27,7 @@
         	var apiKey = "e63d38bc9de5863a4bbdfa74a087ea38";
         	$.ajax({
         		type: 'GET',
-        		url: 'http://ws.audioscrobbler.com/2.0/?method=track.search&track=' + musicKeyWord + '&api_key=' + apiKey + '&format=json',
+        		url: 'http://ws.audioscrobbler.com/2.0/?method=track.search&track=' + musicKeyWord + '&api_key=' + apiKey + '&format=json&limit=8',
         		contentType: "application/x-www-form-urlencoded; charset=UTF-8",		
         		success: function(response){
         			var musicList = response["results"]["trackmatches"]["track"];
